Fix layout and spacing of .sidebar

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -51,6 +51,9 @@
 
 .sidebar {
   background-color: #FF7755;
+  display: grid;
+  grid-area: 2 / 1 / 4 / 2;
+  gap: 50px;
 }
 
 .sidebar .photo {
